examples/codegen/stdlib-tests/early_return.an
import Std.EarlyReturn.EarlyReturn, with_early_return, early_return
import Std.Stream.iota, iter, stream_fn

main () =
    // Early return out of a stream consumer
    println <| with_early_return do
        iter (iota 10) fn x ->
            if x > 3 then early_return x
        0

    // Search for the first index where x == 7; return Some i, or None if not found
    println <| with_early_return do
        iter (iota 10) fn x ->
            if x == 7 then early_return (Maybe.Some x)
        Maybe.None

    // Same search but item is missing -> falls through to None
    println <| with_early_return do
        iter (iota 5) fn x ->
            if x == 99 then early_return (Maybe.Some x)
        Maybe.None

    // Nested with_early_return: inner returns early but outer should continue
    println <| with_early_return fn _ret_outer ->
        inner = with_early_return fn ret_inner ->
            early_return 5 {ret_inner}
            999  // unreachable
        inner + 10

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/stdlib-tests/early_return.an:26:13
// 25 |         inner = with_early_return fn ret_inner ->
//    |             // error: This is called as if it were a fn _ {_} => _ but it has type fn _ -> Never can (EarlyReturn _)
// 26 |             early_return 5 {ret_inner}
//    |             ^^^^^^^^^^^^
// 27 |             999  // unreachable
// 
// Found 1 error and 0 warnings

